--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
     "start:docs": "node scripts/start.js",
     "gen:docs": "node scripts/generateComponentData.js",
     "gen:docs-watch": "npm run gen:docs -- --watch",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "build:docs": "node scripts/build.js",
+    "test": "node scripts/test.js",
+    "predeploy:docs": "npm run builod:docs",
+    "deploy:docs": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -120,16 +122,18 @@
     ]
   },
   "devDependencies": {
-    "chokidar": "^1.6.1",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "npm-run-all": "^4.0.2",
-    "prop-types": "^15.6.2",
-    "react-docgen": "^2.14.0",
-    "react-test-renderer": "^16.6.3",
-    "styled-components": "^4.1.1"
+    "chokidar": "2.0.4",
+    "enzyme": "3.7.0",
+    "enzyme-adapter-react-16": "1.7.0",
+    "gh-pages": "^2.0.1",
+    "npm-run-all": "4.0.2",
+    "prop-types": "15.6.2",
+    "react-docgen": "2.14.0",
+    "react-test-renderer": "16.6.3",
+    "styled-components": "4.1.1"
   },
   "files": [
     "lib"
-  ]
+  ],
+  "homepage": "http://ivanaszuber.github.io/shared-components"
 }
