--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buffer-components-v2",
+  "name": "shared-components",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
