--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
-    "fsevents": "^2.0.1",
     "highlight.js": "^9.10.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
@@ -122,7 +121,7 @@
     ]
   },
   "devDependencies": {
-    "chokidar": "2.0.4",
+    "chokidar": "^2.0.4",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
     "gh-pages": "^2.0.1",
