adds automatic snapshot testing and updates readme

--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
     "gh-pages": "^2.0.1",
+    "jest-auto-snapshots": "^3.0.1",
     "npm-run-all": "4.0.2",
     "prop-types": "15.6.2",
     "react-docgen": "2.14.0",
