moves variation component styles to a separate file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,9 @@
     "import/no-extraneous-dependencies": 0,
     "import/no-dynamic-require": 0,
     "global-require": 0,
-    "react/prefer-stateless-function": 0
+    "react/prefer-stateless-function": 0,
+    "import/no-unresolved": 0,
+    "import/prefer-default-export": 0,
+    "prefer-template": "warn"
   }
 }
