--- a/package.json
+++ b/package.json
@@ -1,16 +1,51 @@
 {
-  "name": "shared-components",
+  "name": "@bufferapp/components-new",
   "version": "0.1.0",
-  "private": true,
+  "engines": {
+    "node": ">=4.0.0"
+  },
+  "main": "./lib/index.js",
+  "description": "Shared UI components for buffer apps",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bufferapp/shared-components.git"
+  },
+  "author": {
+    "name": "Ivana Zuber",
+    "email": "ivanas.zuber@gmail.com",
+    "url": "https://github.com/ivanaszuber"
+  },
+  "keywords": [
+    "components",
+    "react",
+    "react-component",
+    "UI"
+  ],
+  "files": [
+    "lib"
+  ],
+  "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/bufferapp/shared-components/issues"
+  },
+  "homepage": "https://github.com/bufferapp/shared-components",
+  "peerDependencies": {
+    "react": ">= 0.14.0"
+  },
   "dependencies": {
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
+    "styled-components": "4.1.1"
+  },
+  "devDependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
-    "babel-plugin-named-asset-import": "^0.2.3",
-    "babel-preset-react-app": "^6.1.0",
+    "babel-plugin-named-asset-import": "0.2.3",
+    "babel-preset-react-app": "6.1.0",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "^2.4.1",
@@ -18,7 +53,7 @@
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.6.0",
-    "eslint-config-react-app": "^3.0.5",
+    "eslint-config-react-app": "3.0.5",
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
@@ -27,7 +62,7 @@
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
-    "highlight.js": "^9.10.0",
+    "highlight.js": "9.10.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
@@ -40,10 +75,8 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.6.3",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
-    "react-dom": "^16.6.3",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
@@ -52,7 +85,17 @@
     "webpack": "4.19.1",
     "webpack-dev-server": "3.1.9",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
+    "workbox-webpack-plugin": "3.6.3",
+    "chokidar": "2.0.4",
+    "enzyme": "3.7.0",
+    "enzyme-adapter-react-16": "1.7.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "gh-pages": "2.0.1",
+    "jest-auto-snapshots": "^3.0.1",
+    "npm-run-all": "4.0.2",
+    "prop-types": "15.6.2",
+    "react-docgen": "2.14.0",
+    "react-test-renderer": "16.6.3"
   },
   "scripts": {
     "prestart": "npm run gen:docs",
@@ -64,7 +107,8 @@
     "test": "node scripts/test.js",
     "t": "npm run test && codecov",
     "predeploy:docs": "npm run build:docs",
-    "deploy:docs": "gh-pages -d build"
+    "deploy:docs": "gh-pages -d build",
+    "prepublish": "npm run build:lib"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -122,22 +166,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "chokidar": "^2.0.4",
-    "enzyme": "3.7.0",
-    "enzyme-adapter-react-16": "1.7.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "gh-pages": "^2.0.1",
-    "jest-auto-snapshots": "^3.0.1",
-    "npm-run-all": "4.0.2",
-    "prop-types": "15.6.2",
-    "react-docgen": "2.14.0",
-    "react-test-renderer": "16.6.3",
-    "styled-components": "4.1.1"
-  },
-  "files": [
-    "lib"
-  ],
-  "homepage": "http://ivanaszuber.github.io/shared-components/"
+  }
 }
