--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bufferapp/components-new--build-template",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "engines": {
     "node": ">=4.0.0"
   },
@@ -43,13 +43,14 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.0",
-    "@svgr/webpack": "2.4.1",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
     "babel-plugin-named-asset-import": "0.2.3",
-    "babel-preset-react-app": "^6.1.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react-app": "6.1.0",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "^2.4.1",
@@ -176,12 +177,7 @@
   },
   "babel": {
     "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "modules": "commonjs"
-        }
-      ],
+      "@babel/preset-env",
       "react-app"
     ]
   }
