fixes jest webpack alias configuration

--- a/package.json
+++ b/package.json
@@ -162,7 +162,8 @@
     ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
+      "src(.*)$": "<rootDir>/src/$1"
     },
     "moduleFileExtensions": [
       "web.js",
