--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bufferapp/components-new--build-template",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "engines": {
     "node": ">=4.0.0"
   },
@@ -49,6 +49,7 @@
     "babel-eslint": "9.0.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "8.0.4",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-named-asset-import": "0.2.3",
     "babel-preset-react-app": "6.1.0",
     "bfj": "6.1.1",
@@ -120,9 +121,7 @@
     "prebuild:lib": "rimraf lib",
     "build:lib": "npm-run-all --parallel build:commonjs build:copy-files",
     "build:copy-files": "node scripts/copyBuildFiles.js",
-    "build:copy-styles":"cross-env NODE_ENV=production babel ./src/style --out-dir ./lib/src/style",
-    "build:copy-components": "cross-env NODE_ENV=production babel ./src/components --out-dir ./lib --ignore test.js",
-    "build:commonjs": "npm-run-all --parallel build:copy-styles build:copy-components",
+    "build:commonjs": "cross-env NODE_ENV=production babel ./src/components --out-dir ./lib --ignore index.js",
     "prepublish": "npm run build:lib"
   },
   "eslintConfig": {
@@ -163,7 +162,7 @@
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
       "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
-      "src(.*)$": "<rootDir>/src/$1"
+      "./src(.*)$": "<rootDir>/src/$1"
     },
     "moduleFileExtensions": [
       "web.js",
@@ -179,6 +178,11 @@
     ]
   },
   "babel": {
+    "plugins": [
+      ["module-resolver", {
+        "root": ["./src"]
+      }]
+    ],
     "presets": [
       "@babel/preset-env",
       "react-app"
