simplify testing scripts
- `yarn test` for testing, coverage, and linting
- `yarn test-update` to update snapshots
- `yarn test-watch` to watch tests

--- a/package.json
+++ b/package.json
@@ -115,9 +115,10 @@
     "gen:docs": "node scripts/generateComponentData.js",
     "gen:docs-watch": "npm run gen:docs -- --watch",
     "build:docs": "node scripts/build.js",
-    "lint": "./node_modules/eslint/bin/eslint.js . --ignore-pattern coverage node_modules",
-    "test": "node scripts/test.js",
-    "t": "npm run test && jest --coverage && npm run lint",
+    "lint": "./node_modules/eslint/bin/eslint.js .",
+    "test": "jest && npm run lint",
+    "test-update": "jest --no-coverage -u",
+    "test-watch": "jest --no-coverage --watch",
     "predeploy:docs": "npm run build:docs",
     "deploy:docs": "gh-pages -d build",
     "prebuild:lib": "rimraf lib",
