--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
+env:
+  - CODECOV_TOKEN="a55c3c59-9244-433d-b2e4-e4c5802eb163"
+
 language: node_js
+
 node_js:
   - "8"
+
 cache: yarn
+
 notifications:
   email: false
+
 install:
-  - npm install -g codecov
-script:
-  - codecov
+  - npm install jest jest-environment-jsdom
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
