fix readme badges and add licence to package.json

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "license": "UNLICENSED",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/bufferapp/shared-components/issues"
   },
