--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "16.6.3",
     "react-docgen": "2.14.0",
     "react-dom": "16.6.3",
+    "react-router-dom": "^4.3.1",
     "styled-components": "4.1.1"
   },
   "devDependencies": {
