--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "bugs": {
     "url": "https://github.com/bufferapp/ui/issues"
   },
-  "homepage": "https://github.com/bufferapp/ui",
+  "homepage": "https://bufferapp.github.io/ui",
   "peerDependencies": {
     "react": ">= 0.14.0"
   },
