--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "^2.4.1",
     "chokidar": "2.0.4",
-    "npm-run-all": "4.0.2",
     "cpx": "1.5.0",
     "cross-env": "^5.2.0",
     "css-loader": "1.0.0",
@@ -87,6 +86,7 @@
     "jest-resolve": "23.6.0",
     "markdown-to-jsx": "^6.9.0",
     "mini-css-extract-plugin": "0.4.3",
+    "npm-run-all": "4.0.2",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -96,10 +96,11 @@
     "prop-types": "15.6.2",
     "raw-loader": "^0.5.1",
     "react-app-polyfill": "^0.1.3",
+    "react-clipboard.js": "^2.0.2",
     "react-dev-utils": "^6.1.1",
     "react-docgen": "2.14.0",
-    "react-test-renderer": "16.6.3",
     "react-router-dom": "^4.3.1",
+    "react-test-renderer": "16.6.3",
     "resolve": "1.8.1",
     "rimraf": "2.6.2",
     "sass-loader": "7.1.0",
