--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   "dependencies": {
     "react": "16.6.3",
     "react-dom": "16.6.3",
+    "react-hotkeys": "^1.1.4",
+    "react-tether": "^1.0.4",
+    "react-transition-group": "^2.5.0",
     "styled-components": "4.1.1"
   },
   "devDependencies": {
