fixes components tests and adds more Button tests

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "jest-auto-snapshots": "^3.0.1",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "jest-styled-components": "^6.3.1",
     "markdown-to-jsx": "^6.9.0",
     "mini-css-extract-plugin": "0.4.3",
     "npm-run-all": "4.0.2",
@@ -124,7 +125,7 @@
     "gen:docs-watch": "npm run gen:docs -- --watch",
     "build:docs": "node scripts/build.js",
     "lint": "./node_modules/eslint/bin/eslint.js .",
-    "test": "jest && npm run lint",
+    "test": "npm run test-update && npm run lint",
     "test-update": "jest --no-coverage -u",
     "test-watch": "jest --no-coverage --watch",
     "predeploy:docs": "npm run build:docs",
