--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
     "react/prefer-stateless-function": 0,
     "import/no-unresolved": 0,
     "import/prefer-default-export": 0,
+    "react/no-array-index-key": 0,
     "prefer-template": "warn"
   }
 }
