--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "import/no-unresolved": 0,
     "import/prefer-default-export": 0,
     "react/no-array-index-key": 0,
+    "no-return-assign": 0,
     "prefer-template": "warn"
   }
 }
