--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "react-clipboard.js": "^2.0.2",
     "react-dev-utils": "^6.1.1",
     "react-docgen": "2.14.0",
+    "react-hot-loader": "^4.6.3",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "16.6.3",
     "resolve": "1.8.1",
