--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "react": ">= 0.14.0"
   },
   "dependencies": {
+    "immutability-helper": "^2.9.0",
     "react": "16.6.3",
     "react-dom": "16.6.3",
     "react-hotkeys": "^1.1.4",
     "react-tether": "^1.0.4",
     "react-transition-group": "^2.5.0",
-    "styled-components": "4.1.1",
-    "immutability-helper": "^2.9.0"
+    "styled-components": "4.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
@@ -52,6 +52,7 @@
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.1.0",
     "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
     "@balajmarius/svg2jsx": "^1.1.0",
     "async": "^2.6.1",
     "babel-core": "^7.0.0-bridge.0",
