pin jest version to fix snapshoots failing in CI

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bufferapp/ui-template",
-  "version": "1.8.5",
+  "version": "1.8.4",
   "engines": {
     "node": ">=4.0.0"
   },
@@ -56,7 +56,7 @@
     "async": "^2.6.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "=23.6.0",
     "babel-loader": "8.0.4",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-named-asset-import": "0.2.3",
@@ -93,11 +93,11 @@
     "identity-obj-proxy": "3.0.0",
     "indent-string": "^3.2.0",
     "inquirer": "^6.2.1",
-    "jest": "23.6.0",
-    "jest-auto-snapshots": "^3.0.1",
-    "jest-pnp-resolver": "1.0.1",
-    "jest-resolve": "23.6.0",
-    "jest-styled-components": "^6.3.1",
+    "jest": "=23.6.0",
+    "jest-auto-snapshots": "=3.0.1",
+    "jest-pnp-resolver": "=1.0.1",
+    "jest-resolve": "=23.6.0",
+    "jest-styled-components": "=6.3.1",
     "markdown-to-jsx": "^6.9.0",
     "mini-css-extract-plugin": "0.4.3",
     "node-fetch": "^2.3.0",
@@ -141,8 +141,8 @@
     "build:docs": "node scripts/build.js",
     "lint": "./node_modules/eslint/bin/eslint.js .",
     "test": "jest && npm run lint",
-    "test-update": "jest --no-coverage -u",
-    "test-watch": "jest --no-coverage --watch",
+    "test-update": "NODE_ENV=production jest --no-coverage -u",
+    "test-watch": "NODE_ENV=production jest --no-coverage --watch",
     "predeploy:docs": "npm run build:docs",
     "deploy:docs": "gh-pages -d build",
     "prebuild:lib": "rimraf lib",
