--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
     "react/no-array-index-key": 0,
     "no-return-assign": 0,
     "prefer-template": "warn",
-    "react/destructuring-assignment": 0
+    "react/destructuring-assignment": 0,
+    "react/no-unused-prop-types": 0
   }
 }
