--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
     "test": "jest && npm run lint",
     "test-update": "NODE_ENV=production jest --no-coverage -u",
     "test-watch": "NODE_ENV=production jest --no-coverage --watch",
-    "predeploy:docs": "npm run build:docs",
+    "predeploy:docs": "npm run gen:docs && npm run build:docs",
     "deploy:docs": "gh-pages -d build",
     "prebuild:lib": "rimraf lib",
     "build:lib": "npm-run-all --parallel build:commonjs build:copy-files",
