--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "async": "2.6.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
-    "babel-jest": "=23.6.0",
+    "babel-jest": "^25.1.0",
     "babel-loader": "8.0.4",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-named-asset-import": "0.2.3",
@@ -123,9 +123,9 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "svgo": "1.1.1",
-    "terser-webpack-plugin": "1.1.0",
+    "terser-webpack-plugin": "^2.3.4",
     "url-loader": "1.1.1",
-    "webpack": "4.19.1",
+    "webpack": "^4.41.5",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
