--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bufferapp/ui-template",
-  "version": "5.32.0",
+  "version": "5.32.0-beta.b561b8c",
   "engines": {
     "node": ">=4.0.0"
   },
