--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bufferapp/ui-template",
-  "version": "5.37.2-beta.af07588",
+  "version": "5.37.2",
   "engines": {
     "node": ">=4.0.0"
   },
