--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-env:
-  - CODECOV_TOKEN="a55c3c59-9244-433d-b2e4-e4c5802eb163"
-
 language: node_js
 
 node_js:
@@ -14,5 +11,10 @@ notifications:
 install:
   - npm install jest jest-environment-jsdom
 
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
