--- a/package.json
+++ b/package.json
@@ -34,14 +34,17 @@
   },
   "homepage": "https://bufferapp.github.io/ui",
   "peerDependencies": {
-    "react": ">= 0.14.0"
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0",
+    "styled-components": "^5.0.1"
   },
   "dependencies": {
     "@reach/tooltip": "0.6.2",
     "immutability-helper": "^2.9.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "styled-components": "4.3.2"
+    "react-is": "16.8.6",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/cli": "7.1.5",
@@ -50,7 +53,7 @@
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.1.0",
     "@babel/preset-env": "7.1.6",
-    "@balajmarius/svg2jsx": "1.1.0",
+    "@balajmarius/svg2jsx": "^2.0.0",
     "async": "2.6.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
@@ -58,7 +61,7 @@
     "babel-loader": "8.0.4",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-named-asset-import": "0.2.3",
-    "babel-plugin-styled-components": "1.10.6",
+    "babel-plugin-styled-components": "1.10.7",
     "babel-preset-react-app": "6.1.0",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
@@ -95,8 +98,8 @@
     "jest-auto-snapshots": "=3.0.1",
     "jest-pnp-resolver": "=1.0.1",
     "jest-resolve": "=23.6.0",
-    "jest-styled-components": "=6.3.1",
-    "markdown-to-jsx": "6.9.0",
+    "jest-styled-components": "7.0.2",
+    "markdown-to-jsx": "^6.11.4",
     "mini-css-extract-plugin": "0.4.3",
     "node-fetch": "2.3.0",
     "npm-run-all": "4.0.2",
@@ -123,10 +126,11 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "svgo": "1.1.1",
-    "terser-webpack-plugin": "^2.3.4",
+    "terser-webpack-plugin": "^4.1.0",
     "url-loader": "1.1.1",
     "webpack": "^4.41.5",
-    "webpack-dev-server": "3.1.14",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
   },
