--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
   "dependencies": {
     "@reach/tooltip": "0.6.2",
     "immutability-helper": "^2.9.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-is": "16.8.6",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-is": "^16.8.6",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
