--- a/package.json
+++ b/package.json
@@ -41,10 +41,7 @@
   "dependencies": {
     "@reach/tooltip": "0.6.2",
     "immutability-helper": "^2.9.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-is": "^16.8.6",
-    "styled-components": "^5.1.1"
+    "react-is": "^16.8.6"
   },
   "devDependencies": {
     "@babel/cli": "7.1.5",
@@ -114,10 +111,12 @@
     "pretty": "2.0.0",
     "prop-types": "15.6.2",
     "raw-loader": "0.5.1",
+    "react": "^16.8.6",
     "react-app-polyfill": "0.1.3",
     "react-clipboard.js": "2.0.2",
     "react-dev-utils": "6.1.1",
     "react-docgen": "2.14.0",
+    "react-dom": "^16.8.6",
     "react-hot-loader": "4.6.3",
     "react-router-dom": "4.3.1",
     "react-test-renderer": "16.8.6",
@@ -125,6 +124,7 @@
     "rimraf": "2.6.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
+    "styled-components": "^5.1.1",
     "svgo": "1.1.1",
     "terser-webpack-plugin": "^4.1.0",
     "url-loader": "1.1.1",
