--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bufferapp/ui-template",
-  "version": "5.62.2",
+  "version": "5.62.2-beta.6bafcac",
   "engines": {
     "node": ">=4.0.0"
   },
