--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "extends": ["airbnb", "prettier"],
   "parser": "babel-eslint",
   "plugins": [
-    "react", "prettier"
+    "react", "prettier", "jsx-a11y"
   ],
   "env": {
     "browser": true,
