--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.1.0",
     "@babel/preset-env": "7.1.6",
+    "@babel/preset-react": "^7.14.5",
     "@balajmarius/svg2jsx": "^2.0.0",
     "async": "2.6.1",
     "babel-core": "7.0.0-bridge.0",
