--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   "dependencies": {
     "@reach/tooltip": "0.6.2",
     "immutability-helper": "^2.9.0",
-    "react-is": "^16.8.6"
+    "react-is": "^16.8.6",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "7.1.5",
@@ -124,7 +125,6 @@
     "rimraf": "2.6.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
-    "styled-components": "^5.1.1",
     "svgo": "1.1.1",
     "terser-webpack-plugin": "^4.1.0",
     "url-loader": "1.1.1",
@@ -198,7 +198,8 @@
             "babel-plugin-styled-components",
             {
               "displayName": true,
-              "pure": true
+              "pure": true,
+              "namespace": "bufferapp/ui"
             }
           ]
         ]
