--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "jest-auto-snapshots": "=3.0.1",
     "jest-pnp-resolver": "=1.0.1",
     "jest-resolve": "=23.6.0",
-    "jest-styled-components": "7.0.2",
+    "jest-styled-components": "^7.0.5",
     "markdown-to-jsx": "^6.11.4",
     "mini-css-extract-plugin": "0.4.3",
     "node-fetch": "2.6.1",
