--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
   "peerDependencies": {
     "react": ">= 16.8.0",
     "react-dom": ">= 16.8.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.3.0"
   },
   "dependencies": {
     "@reach/tooltip": "0.6.2",
     "immutability-helper": "^2.9.0",
-    "react-is": "^16.8.6"
+    "react-is": "^16.8.6",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "7.1.5",
@@ -96,7 +97,7 @@
     "jest-auto-snapshots": "=3.0.1",
     "jest-pnp-resolver": "=1.0.1",
     "jest-resolve": "=23.6.0",
-    "jest-styled-components": "7.0.2",
+    "jest-styled-components": "^7.0.5",
     "markdown-to-jsx": "^6.11.4",
     "mini-css-extract-plugin": "0.4.3",
     "node-fetch": "2.6.1",
@@ -124,7 +125,6 @@
     "rimraf": "2.6.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
-    "styled-components": "^5.1.1",
     "svgo": "1.1.1",
     "terser-webpack-plugin": "^4.1.0",
     "url-loader": "1.1.1",
@@ -198,7 +198,8 @@
             "babel-plugin-styled-components",
             {
               "displayName": true,
-              "pure": true
+              "pure": true,
+              "namespace": "bufferapp/ui"
             }
           ]
         ]
