Replace all usage and reference of npm with yarn

--- a/package.json
+++ b/package.json
@@ -135,17 +135,17 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
-    "prestart": "npm run gen:docs",
+    "prestart": "yarn gen:docs",
     "start": "npm-run-all --parallel start:docs gen:docs-watch",
     "start:docs": "node scripts/start.js",
     "gen:docs": "node scripts/generateComponentData.js",
-    "gen:docs-watch": "npm run gen:docs -- --watch",
+    "gen:docs-watch": "yarn gen:docs -- --watch",
     "build:docs": "node scripts/build.js",
     "lint": "./node_modules/eslint/bin/eslint.js .",
-    "test": "jest && npm run lint",
+    "test": "jest && yarn lint",
     "test-update": "jest --no-coverage -u",
     "test-watch": "jest --no-coverage --watch",
-    "predeploy:docs": "npm run gen:docs && npm run build:docs",
+    "predeploy:docs": "yarn gen:docs && yarn build:docs",
     "deploy:docs": "gh-pages -d build",
     "prebuild:lib": "rimraf lib",
     "build:lib": "npm-run-all --parallel build:commonjs build:copy-files",
