Update .travis.yml to use yarn and remove jest-pnp-resolver as it's the default resolver as of jest@^24.4.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ notifications:
   email: false
 
 install:
-  - npm install jest jest-environment-jsdom@26.6.2
+  - yarn add jest jest-environment-jsdom@26.6.2
 
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
