use a hyphen instead of a forward slash in namespacing

--- a/package.json
+++ b/package.json
@@ -198,7 +198,7 @@
             "babel-plugin-styled-components",
             {
               "pure": true,
-              "namespace": "bufferapp/ui",
+              "namespace": "bufferapp-ui",
               "minify": true
             }
           ]
