--- a/package.json
+++ b/package.json
@@ -153,7 +153,7 @@
     "publish": "./scripts/publish.sh",
     "beta:publish": "node ./scripts/betaPublish.js",
     "component:new": "node ./scripts/newComponent.js",
-    "gen:icons": "node ./scripts/generateIconComponents.js"
+    "gen:icons": "node ./scripts/generateIconComponents.js && eslint src/components/Icon/Icons/** --fix"
   },
   "browserslist": [
     ">0.2%",
