--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bufferapp/ui-template",
-  "version": "7.37.0",
+  "version": "7.37.0-beta.2",
   "engines": {
     "node": ">=4.0.0"
   },
@@ -41,7 +41,7 @@
     "styled-components": "^5.3.0"
   },
   "dependencies": {
-    "@reach/tooltip": "0.17.0",
+    "@reach/tooltip": "0.13.0",
     "immutability-helper": "^2.9.0",
     "react-is": "^16.8.6",
     "styled-components": "^5.3.0"
