--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bufferapp/ui-template",
-  "version": "7.37.0-beta.2",
+  "version": "7.37.0",
   "engines": {
     "node": ">=4.0.0"
   },
