--- a/package.json
+++ b/package.json
@@ -106,9 +106,10 @@
     "@babel/preset-env": "7.1.6",
     "@babel/preset-react": "^7.14.5",
     "@balajmarius/svg2jsx": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "async": "2.6.4",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "9.0.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "8.0.4",
     "babel-plugin-module-resolver": "3.1.1",
@@ -127,14 +128,18 @@
     "dotenv-expand": "4.2.0",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
-    "eslint": "5.6.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "3.6.0",
+    "eslint": "8.40.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "17.0.0",
     "eslint-loader": "2.1.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-prettier": "3.0.1",
-    "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "27.2.1",
+    "eslint-plugin-jsx-a11y": "~6.7.1",
+    "eslint-plugin-n": "15.1.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "~4.6.0",
     "figma-api": "1.3.1",
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
@@ -176,6 +181,7 @@
     "style-loader": "0.23.0",
     "svgo": "1.1.1",
     "terser-webpack-plugin": "^4.1.0",
+    "typescript": "4.9.5",
     "url-loader": "1.1.1",
     "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.8.0",
