--- a/package.json
+++ b/package.json
@@ -102,6 +102,10 @@
     "@balajmarius/svg2jsx": "^2.0.0",
     "@types/jest": "27.5.2",
     "@types/node": "18.15.11",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.25",
     "@types/webpack-env": "1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
